# stellarproof

./: .gitignore  BUILD_NOTES.md  Cargo.toml  DEMO_SCRIPT.md  GITHUB_ACTIONS_PROOF.md  README.md  STELLAR_TESTNET.md  demo-captions.html  package.json  railway.json  server.js  vercel.json
.github/workflows/: stellarproof-linux.yml
api/: proof-status.js
app/: brand-review.html  index.html  proof.html  script.js  styles.css
app/api/: proof-trigger.js
app/lib/: github-actions.js
app/proofs/: latest-proof.json
contracts/stellarproof_attestor/: Cargo.toml
contracts/stellarproof_attestor/src/: lib.rs  test.rs
contracts/stellarproof_attestor/test_snapshots/test/: submit_attestation_verifies_and_stores_public_journal.1.json
risc0/guest/: Cargo.toml
risc0/guest/src/: main.rs
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/: Cargo.toml
scripts/: demo.js  deploy-attestor-testnet.ps1  publish-proof-json.js  submit-attestation.ps1
