[workspace]
members = [
    "contracts/stellarproof_attestor",
    "risc0/host",
    "risc0/methods",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
soroban-sdk = "25.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
