[package]
name = "stellarproof-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
stellarproof-methods = { path = "../methods" }
risc0-zkvm = "3.0"
risc0-ethereum-contracts = "3.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
